@@ -1,3 +1,6 @@
+2018-07-12  Kirit Saelensminde  <kirit@felspar.com>
+ `fostlib::nullable`, `fostlib::null_t` and `fostlib::null` are now aliases to the `std::optional` types and values.
+
 2018-07-09  Kirit Saelensminde  <kirit@felspar.com>
  Add a logger that outputs single lines of JSON to the console.
 
